// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with border 1`] = `
<div
  className="NavButton bordered"
>
  <a
    className="material waves-effect waves-teal btn-flat"
    href="/test"
  >
    <div>
      Click me
    </div>
  </a>
</div>
`;

exports[`renders without border 1`] = `
<div
  className="NavButton "
>
  <a
    className="material waves-effect waves-teal btn-flat"
    href="/test"
  >
    <div>
      Click me
    </div>
  </a>
</div>
`;
